[gd_scene load_steps=7 format=3 uid="uid://dec02kajrpa0y"]

[ext_resource type="PackedScene" uid="uid://de43yyxgdi5wh" path="res://System/ObjectTemplates/GameObject.tscn" id="1_xxuqh"]
[ext_resource type="Script" path="res://System/ObjectTemplates/CommonStates/Idle.gd" id="2_dytad"]
[ext_resource type="Script" path="res://System/CharacterObject.gd" id="2_y4e0i"]
[ext_resource type="Script" path="res://System/CharacterState.gd" id="3_m3tg4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0jsxs"]
bg_color = Color(0.0431373, 0.0431373, 0.0431373, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2m8et"]
bg_color = Color(0.95, 0.95, 0, 1)

[node name="CharacterObject" instance=ExtResource("1_xxuqh")]
script = ExtResource("2_y4e0i")
MaxHP = 100.0
MaxSP = 100.0
IgnoreYShake = false
pickupMoves = ""

[node name="MovementBox" parent="." index="0"]
z_index = 2

[node name="HurtBox" parent="." index="1"]
z_index = 2

[node name="Sprite" parent="." index="3"]
use_parent_material = true

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource("2_dytad")
endless = true

[node name="Default" parent="StateMachine" index="1"]
duration = 0
fallbackState = "Idle"

[node name="HurtGL" type="Node" parent="StateMachine" index="2"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
isHurtState = true
animationName = "HurtGL"
fallbackState = "Idle"

[node name="HurtGrabbed" type="Node" parent="StateMachine" index="3"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
isHurtState = true
animationName = "HurtGrabbed"
fallbackState = "Idle"

[node name="HurtThrown" type="Node" parent="StateMachine" index="4"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
isHurtState = true
animationName = "HurtThrown"
fallbackState = "Idle"

[node name="HurtGM" type="Node" parent="StateMachine" index="5"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
isHurtState = true
animationName = "HurtGM"
fallbackState = "Idle"

[node name="HurtGH" type="Node" parent="StateMachine" index="6"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
isHurtState = true
animationName = "HurtGH"
fallbackState = "Idle"

[node name="HurtA" type="Node" parent="StateMachine" index="7"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
isHurtState = true
fallbackState = "Idle"

[node name="HurtOTG" type="Node" parent="StateMachine" index="8"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
animationName = "HurtOTG"
fallbackState = "Idle"

[node name="HurtDazed" type="Node" parent="StateMachine" index="9"]
script = ExtResource("3_m3tg4")
canLandCancel = false
landCancelLag = 9
isHurtState = true
animationName = "HurtDazed"
fallbackState = "Idle"

[node name="HealthBar" type="Control" parent="." index="5"]
unique_name_in_owner = true
layout_mode = 3
anchors_preset = 0
offset_left = -23.0
offset_right = 22.0
offset_bottom = 6.0
rotation = -1.11701
pivot_offset = Vector2(22.5, 3)

[node name="ColorRect" type="ColorRect" parent="HealthBar" index="0"]
layout_mode = 0
offset_right = 45.0
offset_bottom = 6.0
color = Color(0, 0, 0, 1)

[node name="HPDisplay" type="ProgressBar" parent="HealthBar" index="1"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 44.0
offset_bottom = 5.0
theme_override_styles/background = SubResource("StyleBoxFlat_0jsxs")
theme_override_styles/fill = SubResource("StyleBoxFlat_2m8et")
value = 50.0
show_percentage = false
